ScriptLoader cleanup